add : Mock 학습